--- a/templates/events/event_details.html
+++ b/templates/events/event_details.html
@@ -4,15 +4,14 @@
 <!-- Stats Row -->
 <div class="dashboard">
     <div class="row g-4">
-<nav aria-label="breadcrumb" class="mb-3">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'events' %}">Church Events</a></li>
-    <li class="breadcrumb-item active" aria-current="page">{{ event.name }}</li>
-  </ol>
-</nav>
-
-</div>
+        <nav aria-label="breadcrumb" class="mb-3">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="{% url 'home' %}">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'events' %}">Church Events</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{ event.name }}</li>
+            </ol>
+        </nav>
+    </div>
 
     <div class="row g-4 mb-4">
     <!-- Event Name -->
@@ -49,7 +48,7 @@
 
     <div class="row g-4 mb-4">
         <div class="col-xl-6 col-md-6">
-            <a href="#" class="text-decoration-none">
+            <a href="{% url 'event-tickets' event.id %}" class="text-decoration-none">
                 <div class="card card-stat h-80 hover-shadow">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
