--- a/templates/events/new_event_ticket.html
+++ b/templates/events/new_event_ticket.html
@@ -76,6 +76,19 @@
                       />
                   </div>
                 </div>
+
+                <div class="row mb-3">
+                  <div class="col">
+                     <label for="exampleInputPassword1" class="form-label fw-bold">Payment Channel</label>
+                    <select class="form-select" id="payment_method" name="payment_method">
+                        <option value="" selected disabled>Select Payment Method</option>
+                        {% for channel in channels %}
+                            <option value={{channel.id}}>{{channel.name}}</option>
+                         {% endfor %}
+                      </select>
+                  </div>
+                 
+                </div>
   
                 <div class="text-center mt-3">
                   <input type="submit" class="btn btn-primary w-30" value="Sell Event Ticket" />
