--- a/templates/requests/marriage/new_request.html
+++ b/templates/requests/marriage/new_request.html
@@ -5,9 +5,10 @@
           <h1 class="modal-title fs-5 text-center fw-bold">Create Marriage Request</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-            <form action="{% url 'new-marriage-request' %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'new-member-request' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="modal-body">
+                  <input type="hidden" value="Wedding" id="category" name="category" readonly />
                   <div class="row mb-3">
                 <div class="col">
                   <label for="exampleInputPassword1" class="form-label fw-bold">Bride First Name</label>
@@ -66,7 +67,7 @@
                     />
                   </div>
                   <div class="col">
-                    <label for="exampleInputPassword1" class="form-label fw-bold">Request By</label>
+                    <label for="exampleInputPassword1" class="form-label fw-bold">Requested By</label>
                     <select class="form-select" id="request_type" name="request_type">
                         {% for request_type in request_types %}
                             <option value={{request_type}}>{{request_type}}</option>
