--- a/templates/includes/district_sidebar.html
+++ b/templates/includes/district_sidebar.html
@@ -61,7 +61,7 @@
                     <i class="fas fa-angle-down ms-auto" style="font-size: 12px; opacity: 0.7;"></i>
                 </a>
                 <ul class="collapse submenu">
-                    <li><a href="{% url 'section-reports' %}" class="nav-link"><i class="fas fa-chart-line me-2"></i> Church Reports</a></li>
+                    <li><a href="{% url 'section-reports' %}" class="nav-link"><i class="fas fa-chart-line me-2"></i> Section Reports</a></li>
                     <li><a href="{% url 'district-reports' %}" class="nav-link"><i class="fas fa-chart-line me-2"></i> District Reports</a></li>
                 </ul>
             </li>
